# Carthage

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
data/models/035_power_drill/: 035_power_drill.urdf
data/models/035_power_drill/google_64k/: nontextured.ply
data/models/arrow/: green.mtl
data/models/can/: 005_tomato_soup_can.urdf
data/models/drone/: drone.blend  drone.blend1  drone.mtl
data/models/sponza/: sponza.mtl
data/scenes/: .gitignore  test.bb  test.scn
data/shaders/: fragment.glsl  shape_vert.glsl  vertex.glsl  voxel_frag.glsl  voxel_vert.glsl
data/tmp/: route.rt  traj.traj
datagen/: CMakeLists.txt  README.md
datagen/data/models/arrow/: red.mtl
datagen/data/models/can/google_64k/: nontextured.ply
datagen/data/models/drone/: drone.mtl
datagen/data/models/ground/: ground.mtl
datagen/data/shaders/: quad_frag.glsl  quad_vert.glsl  shape_frag.glsl
datagen/data/tmp/: route.rt  traj.traj
datagen/ext/glad/include/glad/: glad.h
datagen/ext/glad/src/: glad.c
datagen/path_generation/: metropolis.py  path.txt  read_data.csv  readme.md  test_kd_tree.py
datagen/scripts/: Makefile  point_cloud.py  trajectory.py
datagen/scripts/proto/: octree.py
datagen/src/: main.cpp  obj.cpp  viewer.cpp
datagen/src/game/: drone.hpp  scene.cpp
datagen/src/graphics/: device.hpp  primitives.hpp
datagen/src/resources/: resources.cpp  resources.hpp
datagen/tmp/: camera.hpp  floodfill.py  graphics_render.hpp  render.hpp  resources.hpp
datagen/tmp/dev_path_generation/: metropolis_4.py
datagen/tmp/glad_old/src/: glad.c
ext/glad/include/glad/: glad.h
learning/scripts/: jitter.py
learning/src/: Visualize_ptcloud_traj.py  dataset.py  forward_pass_new.py  model.py  train.py  util.py  visualize.py
learning/tmp/: Visualize_ptcloud_traj.py  pose.py  train.py
path_generation/: b_spline_test.py  metropolis.py  metropolis_1.py  metropolis_2.py
script/: scene.py
script/proto/: octree.py
scripts/: build.sh  build_objs.sh  data_loader.py  floodfill.py  forest.py  forward_pass.py  octree.py  point_cloud.py  proto.py  scene.py  train.py  trajectory.py
scripts/proto/: proto.py
src/: main.cpp  obj.cpp  octree.cpp  test.cpp  viewer.cpp
src/core/: allocators.hpp  containers.hpp  event.hpp  octree.hpp
src/game/: camera.hpp  debug.hpp  drone.cpp  drone.hpp  object.hpp  octree.cpp  octree.hpp  primitives.hpp  scene.cpp  scene.hpp
src/graphics/: device.cpp  device.hpp  primitives.hpp  render.hpp
src/resources/: assets.hpp  loader.hpp  resources.cpp  resources.hpp
tmp/: camera.hpp  loader.hpp
tmp/dev_path_generation/: matrolpolis_3.py  metropolis_1.py  metropolis_2.py  metropolis_3.py
